# LLMInferenceKotlin

./: README.md
composeApp/: build.gradle.kts
composeApp/src/jvmMain/cpp/: CMakeLists.txt  LlamaJni.cpp
composeApp/src/jvmMain/kotlin/org/example/project/: App.kt  main.kt
